--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,12 +3,13 @@
   <aside class="span4">
     <section>
       <h1>
-        <%= gravatar_for @user %> 
+        <%= gravatar_for @user %>
         <%= @user.name %>
       </h1>
     </section>
   </aside>
   <div class="span8">
+    <%= render 'follow_form' if signed_in? %>
     <% if @user.microposts.any? %>
       <h3>Microposts (<%= @user.microposts.count %>) </h3>
       <ol class="microposts">
