--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
   <small>
-    <a href="http://railstutorial.org/">Rails Tutorial</a> by Michael Hartl
+    Basado en el tutorial "<a href="http://railstutorial.org/">Rails Tutorial</a> de Michael Hartl". Programado por Paulo Toro. 
   </small>
   <nav>
     <ul>
