link al github en el footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
   <small>
-    Basado en el tutorial "<a href="http://railstutorial.org/">Rails Tutorial</a> de Michael Hartl". Programado por Paulo Toro. 
+    Basado en el tutorial "<a href="http://railstutorial.org/">Rails Tutorial</a> de Michael Hartl". Programado por <a href="https://github.com/pauloat">Paulo Toro</a>. 
   </small>
   <nav>
     <ul>
